[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cone.charts"
version = "1.1.0.dev0"
description = "Chart.js integration into cone"
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
test = [
    "zope.pytestlayer",
    "pytest",
]
docs = [
    "Jinja2<3.0",
    "markupsafe<2.1.0",
    "Sphinx",
    "sphinx-conestack-theme",
    "sphinx-js",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.charts"

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
