[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cone.charts"
version = "1.1.0"
description = "Chart.js integration into cone"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cone Contributors", email = "dev@conestack.org"}]
keywords = ["node", "pyramid", "cone", "web"]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "cone.app>1.0.99",
]

[project.optional-dependencies]
test = [
    "cone.app[test]",
    "pytest",
    "zope.pytestlayer",
]
docs = [
    "Jinja2<3.0",
    "Sphinx",
    "markupsafe<2.1.0",
    "sphinx-conestack-theme",
    "sphinx-js",
]

[project.urls]
Homepage = "http://github.com/conestack/cone.charts"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "README.rst"},
    {text = "\n\n"},
    {path = "CHANGES.rst"},
    {text = "\n\n"},
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/docs",
    "/js/",
    "/Makefile",
    "/mx.ini",
    "/package.json",
    "/pnpm-lock.yaml",
    "/scripts/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cone"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
